force-app/main/default/objects/ClickSign__c/ClickSign__c.object-meta.xml
<CustomObject>
    <label>ClickSign</label>
    <nameField>
        <displayFormat>DS-{000000000}</displayFormat>
        <label>ClickSign</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickSign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>