force-app/main/default/objects/ClickSign__c/fields/ClickSignEnvelope__c.field-meta.xml
<CustomField>
    <fullName>ClickSignEnvelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickSign Envelope</label>
    <referenceTo>ClickSignEnvelope__c</referenceTo>
    <relationshipLabel>ClickSign</relationshipLabel>
    <relationshipName>ClickSign</relationshipName>
    <type>Lookup</type>
</CustomField>