force-app/main/default/objects/ClickSign__c/fields/ClickSignTemplate__c.field-meta.xml
<CustomField>
    <fullName>ClickSignTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickSign Template</label>
    <referenceTo>ClickSignTemplate__c</referenceTo>
    <relationshipLabel>ClickSign</relationshipLabel>
    <relationshipName>ClickSign</relationshipName>
    <type>Lookup</type>
</CustomField>