force-app/main/default/objects/ClickSign__c/fields/ContractNumberFml__c.field-meta.xml
<CustomField>
    <fullName>ContractNumberFml__c</fullName>
    <formula>TEXT(ContractNumber__c) +  &quot;/&quot; + TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>