force-app/main/default/objects/ClickSign__c/fields/CurrentStep__c.field-meta.xml
<CustomField>
    <fullName>CurrentStep__c</fullName>
    <label>Current Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Recipients</fullName>
            </value>
            <value>
                <fullName>Prepare &amp; Send</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>